syntax = "proto3";
package web;

option go_package = "web/v1;web";

import "validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

// 联系人服务
service Contact {
  // 联系人列表接口
  rpc List(ContactListRequest) returns (ContactListResponse) {
    option (google.api.http) = {
      post: "/api/v1/contact/list"
      body: "*"
    };
  }

  // 联系人删除接口
  rpc Delete(ContactDeleteRequest) returns (ContactDeleteResponse) {
    option (google.api.http) = {
      post: "/api/v1/contact/delete"
      body: "*"
    };
  }

  // 联系人备注修改接口
  rpc EditRemark(ContactEditRemarkRequest) returns (ContactEditRemarkResponse) {
    option (google.api.http) = {
      post: "/api/v1/contact/edit-remark"
      body: "*"
    };
  }

  // 联系人详情接口
  rpc Detail(ContactDetailRequest) returns (ContactDetailResponse) {
    option (google.api.http) = {
      post: "/api/v1/contact/detail"
      body: "*"
    };
  }

  // 联系人搜索接口
  rpc Search(ContactSearchRequest) returns (ContactSearchResponse) {
    option (google.api.http) = {
      post: "/api/v1/contact/search"
      body: "*"
    };
  }

  // 修改联系人分组接口
  rpc ChangeGroup(ContactChangeGroupRequest) returns (ContactChangeGroupResponse) {
    option (google.api.http) = {
      post: "/api/v1/contact/change-group"
      body: "*"
    };
  }

  // 获取联系人在线状态接口
  rpc OnlineStatus(ContactOnlineStatusRequest) returns (ContactOnlineStatusResponse) {
    option (google.api.http) = {
      post: "/api/v1/contact/online-status"
      body: "*"
    };
  }
}

// 联系人列表接口请求参数
message ContactListRequest{}

// 联系人列表接口响应参数
message ContactListResponse{
  message Item{
    // 用户ID
    int32 user_id = 1 [(google.api.field_behavior) = REQUIRED];
    // 昵称
    string nickname = 2 [(google.api.field_behavior) = REQUIRED];
    // 性别[0:未知;1:男;2:女;]
    int32 gender = 3 [(google.api.field_behavior) = REQUIRED];
    // 座右铭
    string motto = 4 [(google.api.field_behavior) = REQUIRED];
    // 头像
    string avatar = 5 [(google.api.field_behavior) = REQUIRED];
    // 备注
    string remark = 7 [(google.api.field_behavior) = REQUIRED];
    // 联系人分组ID
    int32 group_id = 8 [(google.api.field_behavior) = REQUIRED];
  }

  repeated Item items = 1 [(google.api.field_behavior) = REQUIRED];
}

// 联系人删除接口请求参数
message ContactDeleteRequest{
  int32 user_id = 1 [(validate.rules).int32.gte = 1, (google.api.field_behavior) = REQUIRED];
}

// 联系人删除接口响应参数
message ContactDeleteResponse{}

// 联系人备注修改接口请求参数
message ContactEditRemarkRequest{
  int32 user_id = 1 [(validate.rules).int32.gte = 1, (google.api.field_behavior) = REQUIRED];
  string remark = 2;
}

// 联系人备注修改接口响应参数
message ContactEditRemarkResponse{}

// 联系人详情接口请求参数
message ContactDetailRequest{
  int32 user_id = 1 [(validate.rules).int32.gte = 1, (google.api.field_behavior) = REQUIRED];
}

// 联系人详情接口响应参数
message ContactDetailResponse{
  int32 user_id = 1 [(google.api.field_behavior) = REQUIRED];
  string mobile = 2 [(google.api.field_behavior) = REQUIRED];
  string nickname = 3 [(google.api.field_behavior) = REQUIRED];
  string avatar = 5 [(google.api.field_behavior) = REQUIRED];
  int32 gender = 6 [(google.api.field_behavior) = REQUIRED];
  string motto = 7 [(google.api.field_behavior) = REQUIRED];
  string email = 11 [(google.api.field_behavior) = REQUIRED];
  int32 relation = 9 [(google.api.field_behavior) = REQUIRED]; // 关系 1陌生人 2好友 3企业同事 4本人
  string contact_remark = 10 [(google.api.field_behavior) = REQUIRED];
  int32 contact_group_id = 12 [(google.api.field_behavior) = REQUIRED];
  string online_status = 13 [(google.api.field_behavior) = REQUIRED]; // Y:在线 N:离线
}

// 联系人搜索接口请求参数
message ContactSearchRequest{
  string mobile = 2 [(validate.rules).string.min_len = 1, (google.api.field_behavior) = REQUIRED];
}

// 联系人搜索接口响应参数
message ContactSearchResponse{
  int32 user_id = 1  [(google.api.field_behavior) = REQUIRED];
  string mobile = 2  [(google.api.field_behavior) = REQUIRED];
  string nickname = 3  [(google.api.field_behavior) = REQUIRED];
  string avatar = 5  [(google.api.field_behavior) = REQUIRED];
  int32 gender = 6  [(google.api.field_behavior) = REQUIRED];
  string motto = 7  [(google.api.field_behavior) = REQUIRED];
}

// 修改联系人分组接口请求参数
message ContactChangeGroupRequest{
  int32 user_id = 1 [(validate.rules).int32.gte = 1, (google.api.field_behavior) = REQUIRED];
  int32 group_id = 2;
}

// 修改联系人分组接口响应参数
message ContactChangeGroupResponse{}

// 获取联系人在线状态请求参数
message ContactOnlineStatusRequest{
  int32 user_id = 1 [(validate.rules).int32.gte = 1, (google.api.field_behavior) = REQUIRED];
}

// 获取联系人在线状态响应参数
message ContactOnlineStatusResponse{
  // 在线状态 [N:离线;Y:在线;]
  string online_status = 1 [(google.api.field_behavior) = REQUIRED];
}
